name:              forum
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            ha oh
maintainer:        ha oh
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://forum.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   Forum
                     Query
                     Model
                     Settings
                     StaticFiles
                     Handler.Root
                     Handler.RootPost
                 
executable         forum
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/forum.hs
    hs-source-dirs: ., config

    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.8     && < 0.9
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , mime-mail
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-template
                 , persistent-postgresql >= 0.5 && < 0.6
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
                 , HDBC-postgresql
                 , HDBC
                 , time
                 , monad-loops
                 , containers
                 , blaze-html
